# golem-timeline

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  ISSUES.md  LICENSE  Makefile.toml  NOAI  README.md  app_build.sh  app_clean.sh  benchmark_cold_storage_medium.json  build.sh  docker-compose-unreleased.yaml  docker-compose.yaml  full_rebuild.sh  golem.yaml  quick_build.sh  quick_full_build.sh  quick_test.sh  quick_test_with_api_definitions.sh  sample.sh
.github/workflows/:  ci.yml  benchmark.yml  benchmarkl.yml  ci.yml  rust.yml  update_benchmark.yml
benchmark/: Cargo.toml
benchmark/src/: main.rs
common-rust/: golem.yaml
common-rust/common-lib/: Cargo.toml
common-rust/common-lib/src/: event_predicate.rs  event_timeline.rs  golem_event.rs  lib.rs  state_dynamic_timeline.rs  state_dynamic_timeline_point.rs  timeline_op.rs
common-rust/timeline-dsl/: Cargo.toml
common-rust/timeline-dsl/src/: lexer.rs  lib.rs  parser.rs  tests.rs
common/timeline-lib/: Cargo.toml
common/timeline-lib/src/: event_timeline.rs  golem_event.rs  lib.rs  state_dynamic_timeline.rs  state_dynamic_timeline_point.rs  timeline_node_worker.rs  timeline_op.rs
components-rust/timeline-aggregator/: Cargo.toml  golem.yaml
components-rust/timeline-aggregator/src/: lib.rs
components-rust/timeline-aggregator/wit/: timeline-aggregator.wit
components-rust/timeline-core/: Cargo.toml  golem.yaml
components-rust/timeline-core/.wit/wit/: main.wit
components-rust/timeline-core/src/: builder.rs  conversions.rs  lib.rs  types.rs
components-rust/timeline-core/src/agents/: aggregator.rs  event_processor.rs  helpers.rs  mod.rs  timeline_driver.rs  timeline_processor.rs
components-rust/timeline-driver/: Cargo.toml  golem.yaml
components-rust/timeline-driver/src/: builder.rs  conversions.rs  lib.rs
components-rust/timeline-event-processor/: Cargo.toml
components-rust/timeline-event-processor/src/: conversions.rs  lib.rs
components-rust/timeline-event-processor/wit/: timeline-event-processor.wit
components-rust/timeline-timeline-processor/: Cargo.toml
components-rust/timeline-timeline-processor/src/: conversions.rs  lib.rs
components/timeline-core/: Cargo.toml  golem.yaml
components/timeline-core/src/: builder.rs  conversions.rs  lib.rs
components/timeline-driver/: Cargo.toml
components/timeline-event-processor/: Cargo.toml  golem.yaml
components/timeline-timeline-processor/: Cargo.toml  golem.yaml
components/timeline-timeline-processor/src/: conversions.rs  extensions.rs  lib.rs
components/timeline-timeline-processor/wit/: timeline-timeline-processor.wit
core/: Cargo.toml  golem.yaml
core-stub/: Cargo.toml
core-stub/src/: bindings.rs  lib.rs
core-stub/wit/: _stub.wit
core/src/: aligned_state_dynamic_timeline.rs  bindings.rs  boundaries.rs  builder.rs  conversions.rs  event_predicate.rs  event_timeline.rs  lib.rs  state_dynamic_timeline_point.rs  state_dynamics_timeline.rs  timeline.rs  timeline_op.rs  worker_timeline.rs  worker_timeline_data.rs  zip_result.rs
core/src/internals/: aligned_state_dynamic_timeline.rs  boundaries.rs  mod.rs  zip_result.rs
core/wit/: core.wit
driver/: Cargo.toml  golem.yaml
driver/src/: bindings.rs  builder.rs  conversions.rs  lib.rs
driver/wit/: driver.wit
event-processor/: Cargo.toml  golem.yaml
event-processor-stub/: Cargo.toml
event-processor-stub/src/: bindings.rs  lib.rs
event-processor-stub/wit/: _stub.wit
event-processor/src/: bindings.rs  conversions.rs  golem_event_value.rs  lib.rs  raw_event.rs
event-processor/wit/: event-processor.wit
partitioner/: Cargo.toml
partitioner/src/: partition.rs
raw-events/: Cargo.toml
raw-events-stub/: Cargo.toml
raw-events-stub/src/: bindings.rs  lib.rs
raw-events/src/: bindings.rs  golem_event_value.rs  lib.rs
raw-events/wit/: raw-events.wit
sample-event-feeder/: Cargo.toml  README.md
sample-event-feeder/src/: main.rs
sample-event-producer/: Cargo.toml
sample-event-producer/src/: main.rs
services/dashboard/: Cargo.toml
services/dashboard/src/: dashboard.html  feeder.rs  main.rs  registry.rs  wave.rs
services/event-generator/: Cargo.toml
services/kafka-consumer-feeder/: Cargo.toml
services/kafka-consumer-feeder/src/: lib.rs  main.rs
services/kafka-producer/: Cargo.toml
services/kafka-producer/src/: lib.rs  main.rs
src/: aligned_state_dynamic_timeline.rs  aligned_timeline.rs  backend.rs  bindings.rs  boundaries.rs  eval.rs  event_predicate.rs  event_record.rs  event_stream.rs  event_timeline.rs  event_type.rs  lib.rs  main.rs  negatable.rs  state.rs  state_dynamic_timeline_point.rs  state_dynamics_timeline.rs  state_start.rs  timeline.rs  timeline_execution.rs  timeline_op.rs  timeline_point.rs  value.rs  worker.rs  worker_sink.rs  worker_timeline.rs  worker_timeline_data.rs  zip_result.rs
test/integration-harness/: Cargo.toml
test/integration-harness/docker/: compose.yml
test/integration-harness/src/: golem_client.rs  harness.rs  lib.rs
test/integration-harness/tests/: aggregation.rs  kafka.rs  propagation.rs  smoke.rs
test/sample-event-feeder/: Cargo.toml  README.md
test/sample-event-producer/: Cargo.toml
timeline/: Cargo.toml
timeline-lib/: Cargo.toml
timeline-lib/src/: bindings.rs  event_predicate.rs  event_stream.rs  lib.rs  state_dynamic_timeline_point.rs  state_dynamics_timeline.rs  timeline.rs  timeline_execution.rs  timeline_op.rs  worker_timeline.rs  worker_timeline_data.rs
timeline-lib/wit/: timeline.wit
timeline-processor/: Cargo.toml  golem.yaml
timeline-processor-stub/: Cargo.toml
timeline-processor-stub/src/: bindings.rs  lib.rs
timeline-processor-stub/wit/: _stub.wit
timeline-processor/src/: bindings.rs  conversions.rs  extensions.rs  lib.rs
timeline-processor/wit/: timeline-processor.wit
timeline/src/: event_predicate.rs  golem_event.rs  lib.rs  state_dynamic_timeline.rs  state_dynamic_timeline_point.rs  timeline_node_worker.rs  timeline_op.rs
timeline/src/internals/: aligned_state_dynamic_timeline.rs  boundaries.rs  mod.rs  zip_result.rs
wit/: timeline.wit
(+16 files in other folders)
