[package]
name = "timeline"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.component.target]
path = "wit"
world = "golem-timeline"

[package.metadata.component.dependencies]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.36.0"
serde_json = "1.0.113"
chrono = "0.4.33"
futures = "0.3.30"
bitflags = "2.4.2"
wit-bindgen = { version = "0.24.0", default-features = false, features = ["realloc"] }
