[package]
name = "timeline"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.component.target]
path = "wit"
world = "golem-timeline"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[dependencies]
tokio = "1.36.0"
serde_json = "1.0.113"
chrono = "0.4.33"
futures = "0.3.30"
bitflags = "2.4.2"
golem-wasm-rpc = { version = "0.0.16", default-features = false, features = ["stub"] }
