[workspace]
members = ["timeline", "event-processor", "timeline-processor", "core", "driver", "core-stub", "event-processor-stub", "timeline-processor-stub", "partitioner"]
exclude = ["sample-event-producer", "sample-event-feeder", "benchmark"]
resolver = "2"

[profile.release]
opt-level = "s"
lto = true
