[package]
name = "benchmark"
version = "0.0.0"
edition = "2021"

autotests = false

[dependencies]
poem = { version = "2.0.0", features = ["prometheus", "opentelemetry", "test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "4.5.4", features = [
    "derive",
    "suggestions",
    "color",
    "help",
] }

[[bin]]
name = "benchmark_report"
path = "src/main.rs"