[package]
name = "core"
edition = "2021"
version = "0.1.0"

[package.metadata.component.target]
world = "core"
path = "wit"

[package.metadata.component.target.dependencies."timeline:event-processor"]
path = "wit/deps/timeline_event-processor"

[package.metadata.component.target.dependencies."timeline:event-processor-stub"]
path = "wit/deps/timeline_event-processor-stub"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."timeline:timeline-processor-stub"]
path = "wit/deps/timeline_timeline-processor-stub"

[package.metadata.component.target.dependencies."timeline:timeline-processor"]
path = "wit/deps/timeline_timeline-processor"

[dependencies]
bitflags = "2.4.2"
chrono = "0.4.33"
futures = "0.3.30"
serde_json = "1.0.113"
tokio = "1.36.0"

[dependencies.timeline]
path = "../timeline"

[dependencies.uuid]
version = "1.8.0"
features = ["v4"]

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []
