[package]
name = "core"
version = "0.1.0"
edition = "2021"

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit-generated/deps/wasm-rpc"

[package.metadata.component.target.dependencies."timeline:core-interface"]
path = "wit-generated/deps/timeline_core-interface"

[package.metadata.component.target.dependencies."timeline:event-processor-interface"]
path = "wit-generated/deps/timeline_event-processor-interface"

[package.metadata.component.target.dependencies."timeline:event-processor-stub"]
path = "wit-generated/deps/timeline_event-processor-stub"

[package.metadata.component.target.dependencies."timeline:timeline-processor-interface"]
path = "wit-generated/deps/timeline_timeline-processor-interface"

[package.metadata.component.target.dependencies."timeline:timeline-processor-stub"]
path = "wit-generated/deps/timeline_timeline-processor-stub"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit-generated/deps/io"

[dependencies]
bitflags = "2.4.2"
chrono = "0.4.33"
futures = "0.3.30"
once_cell = "1.17.1"
serde_json = "1.0.113"
tokio = "1.36.0"

[dependencies.timeline]
path = "../timeline"

[dependencies.uuid]
version = "1.8.0"
features = ["v4"]

[dependencies.wit-bindgen-rt]
version = "0.26.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []
