[package]
name = "core"
version = "0.1.0"
edition = "2021"

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit-generated/deps/wasm-rpc"

[package.metadata.component.target.dependencies."timeline:core-exports"]
path = "wit-generated/deps/timeline_core-exports"

[package.metadata.component.target.dependencies."timeline:event-processor-client"]
path = "wit-generated/deps/timeline_event-processor-client"

[package.metadata.component.target.dependencies."timeline:event-processor-exports"]
path = "wit-generated/deps/timeline_event-processor-exports"

[package.metadata.component.target.dependencies."timeline:timeline-processor-client"]
path = "wit-generated/deps/timeline_timeline-processor-client"

[package.metadata.component.target.dependencies."timeline:timeline-processor-exports"]
path = "wit-generated/deps/timeline_timeline-processor-exports"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit-generated/deps/io"

[dependencies]
bitflags = "2.4.2"
chrono = "0.4.33"
futures = "0.3.30"
once_cell = "1.17.1"
serde_json = "1.0.113"
tokio = "1.36.0"

[dependencies.timeline]
path = "../timeline"

[dependencies.uuid]
version = "1.8.0"
features = ["v4"]

[dependencies.wit-bindgen-rt]
version = "=0.37.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []
