[package]
name = "driver"
version = "0.0.1"
edition = "2021"

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit-generated/deps/wasm-rpc"

[package.metadata.component.target.dependencies."timeline:core-interface"]
path = "wit-generated/deps/timeline_core-interface"

[package.metadata.component.target.dependencies."timeline:core-stub"]
path = "wit-generated/deps/timeline_core-stub"

[package.metadata.component.target.dependencies."timeline:driver-interface"]
path = "wit-generated/deps/timeline_driver-interface"

[package.metadata.component.target.dependencies."timeline:event-processor-interface"]
path = "wit-generated/deps/timeline_event-processor-interface"

[package.metadata.component.target.dependencies."timeline:timeline-processor-interface"]
path = "wit-generated/deps/timeline_timeline-processor-interface"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit-generated/deps/io"

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
serde = "1.0.199"
serde_json = "1.0.116"

[dependencies.core]
path = "../core"

[dependencies.event-processor]
path = "../event-processor"

[dependencies.timeline]
path = "../timeline"

[dependencies.wit-bindgen-rt]
version = "0.26.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []
