[package]
name = "event-processor-stub"
edition = "2021"
version = "0.0.1"

[package.metadata.component]
package = "timeline:event-processor"

[package.metadata.component.target]
world = "wasm-rpc-stub-event-processor"
path = "wit"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."timeline:event-processor"]
path = "wit/deps/timeline_event-processor"

[dependencies.golem-wasm-rpc]
version = "0.0.23"
features = ["stub"]
default-features = false

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
