[package]
name = "event-processor"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"
wit-bindgen = { version = "0.17.0", default-features = false, features = ["realloc"] }

[package.metadata.component.target]
path = "wit"
world = "event-processor"

[package.metadata.component.target.dependencies]
