[package]
name = "event-processor"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
timeline = { path = "../timeline" }
once_cell = "1.17.1"
rand = "0.8.5"
core = {path = "../core"}

[package.metadata.component.target]
path = "wit"
world = "event-processor"

[dependencies.wit-bindgen-rt]
version = "0.26.0"
features = ["bitflags"]

[package.metadata.component.target.dependencies]
