[package]
name = "raw-events-stub"
edition = "2021"
version = "0.0.1"

[package.metadata.component]
package = "timeline:raw-events"

[package.metadata.component.target]
world = "wasm-rpc-stub-raw-events"
path = "wit"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."timeline:raw-events"]
path = "wit/deps/timeline_raw-events"

[dependencies.golem-wasm-rpc]
version = "0.0.20"
features = ["stub"]
default-features = false

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
