[package]
name = "sample-event-feeder"
edition = "2021"
version = "0.0.1"
description = "A sample event feeder that feeds the data to the workers that was returned by golem-timeline initialiserß"


[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
futures = "0.3"
pulsar = "5.1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.10"
serde_json = "1.0.116"
serde = "1.0.198"
log = "0.4"
env_logger = "0.9"


[[bin]]
name = "sample-event-feeder"

