[package]
name = "timeline-lib"
version = "0.1.0"
edition = "2021"

[package.metadata.component.target]
path = "wit"
world = "golem-timeline"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies."timeline:rawevents"]
path = "wit/deps/raw-events"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[dependencies]
tokio = "1.36.0"
serde_json = "1.0.113"
chrono = "0.4.33"
futures = "0.3.30"
bitflags = "2.4.2"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []
