[package]
name = "timeline-processor-stub"
version = "0.0.1"
edition = "2021"

[package.metadata.component]
package = "timeline:timeline-processor"

[package.metadata.component.target]
world = "wasm-rpc-stub-timeline-processor"
path = "wit"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."timeline:event-processor"]
path = "wit/deps/timeline_event-processor"

[package.metadata.component.target.dependencies."timeline:timeline-processor"]
path = "wit/deps/timeline_timeline-processor"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit/deps/io"

[dependencies.golem-wasm-rpc]
version = "1.0.7"
features = ["stub"]
default-features = false

[dependencies.wit-bindgen-rt]
version = "0.26.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
