[package]
name = "timeline-processor"
version = "0.0.1"
edition = "2021"

[package.metadata.component.target]
world = "timeline-processor"
path = "wit"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."timeline:event-processor"]
path = "wit/deps/timeline_event-processor"

[package.metadata.component.target.dependencies."timeline:event-processor-stub"]
path = "wit/deps/timeline_event-processor-stub"

[package.metadata.component.target.dependencies."timeline:timeline-processor-stub"]
path = "wit/deps/timeline_timeline-processor-stub"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit/deps/io"

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"

[dependencies.core]
path = "../core"

[dependencies.timeline]
path = "../timeline"

[dependencies.wit-bindgen-rt]
version = "0.26.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
required-features = []
