[package]
name = "timeline-processor"
version = "0.0.1"
edition = "2021"

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit-generated/deps/wasm-rpc"

[package.metadata.component.target.dependencies."timeline:event-processor-interface"]
path = "wit-generated/deps/timeline_event-processor-interface"

[package.metadata.component.target.dependencies."timeline:event-processor-stub"]
path = "wit-generated/deps/timeline_event-processor-stub"

[package.metadata.component.target.dependencies."timeline:timeline-processor-interface"]
path = "wit-generated/deps/timeline_timeline-processor-interface"

[package.metadata.component.target.dependencies."timeline:timeline-processor-stub"]
path = "wit-generated/deps/timeline_timeline-processor-stub"

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit-generated/deps/io"

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"

[dependencies.core]
path = "../core"

[dependencies.timeline]
path = "../timeline"

[dependencies.wit-bindgen-rt]
version = "0.26.0"
features = ["bitflags"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
required-features = []
