[package]
name = "timeline_core"
version = "0.0.1"
edition = "2021"

[package.metadata]

[package.metadata.component]

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies]
"wasi:clocks" = { path = "wit-generated/deps/clocks" }
"wasi:io" = { path = "wit-generated/deps/io" }
"golem:rpc" = { path = "wit-generated/deps/wasm-rpc" }
"timeline:event-processor-exports" = { path = "wit-generated/deps/timeline_event-processor-exports" }
"timeline:event-processor-client" = { path = "wit-generated/deps/timeline_event-processor-client" }
"timeline:timeline-processor-exports" = { path = "wit-generated/deps/timeline_timeline-processor-exports" }
"timeline:timeline-processor-client" = { path = "wit-generated/deps/timeline_timeline-processor-client" }
"timeline:core-exports" = { path = "wit-generated/deps/timeline_core-exports" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
common-lib = { path = "../../common-rust/common-lib" }
wit-bindgen-rt = { workspace = true }
bitflags = "2.4.2"
chrono = "0.4.33"
futures = "0.3.30"
once_cell = "1.17.1"
serde_json = "1.0.113"
tokio = "1.36.0"
uuid = { version = "1.15.1", features = ["v4"] }
