[package]
name = "timeline_timeline_processor"
version = "0.0.1"
edition = "2021"

[package.metadata]

[package.metadata.component]

[package.metadata.component.target]
path = "wit-generated"

[package.metadata.component.target.dependencies]
"wasi:clocks" = { path = "wit-generated/deps/clocks" }
"wasi:io" = { path = "wit-generated/deps/io" }
"golem:rpc" = { path = "wit-generated/deps/wasm-rpc" }
"timeline:event-processor-exports" = { path = "wit-generated/deps/timeline_event-processor-exports" }
"timeline:event-processor-client" = { path = "wit-generated/deps/timeline_event-processor-client" }
"timeline:timeline-processor-exports" = { path = "wit-generated/deps/timeline_timeline-processor-exports" }
"timeline:timeline-processor-client" = { path = "wit-generated/deps/timeline_timeline-processor-client" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[dependencies]
timeline-lib = { path = "../../common/timeline-lib" }
wit-bindgen-rt = { workspace = true }
