[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"
description = "Live dashboard for timeline aggregation results"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }

[[bin]]
name = "dashboard"
path = "src/main.rs"
