[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"
description = "Live dashboard for timeline aggregation results"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
common-lib = { path = "../../common-rust/common-lib" }
timeline-dsl = { path = "../../common-rust/timeline-dsl" }

[[bin]]
name = "dashboard"
path = "src/main.rs"
