[package]
name = "kafka-consumer-feeder"
version = "0.1.0"
edition = "2021"
description = "Consumes events from Kafka and feeds them to Golem workers via REST API. Reusable for local testing and cloud deployments."

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "kafka-consumer-feeder"
path = "src/main.rs"
