[package]
name = "kafka-producer"
version = "0.1.0"
edition = "2021"
description = "Publishes generated events to Kafka topics. Reusable for local testing and cloud deployments."

[dependencies]
event-generator = { path = "../event-generator" }

rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[[bin]]
name = "kafka-producer"
path = "src/main.rs"
