[package]
name = "integration-harness"
version = "0.1.0"
edition = "2021"
description = "Integration test harness: orchestrates Golem, event generation, and assertion"

[dependencies]
serde_json = "1"

[dev-dependencies]
event-generator = { path = "../../services/event-generator" }
kafka-producer = { path = "../../services/kafka-producer" }
kafka-consumer-feeder = { path = "../../services/kafka-consumer-feeder" }
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
